# ZZZipper

./: CMakeLists.txt  CMakeLists.txt.user.a244469  archivedialog.cpp  archivedialog.h  archivedialog.ui  icont.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resor.qrc
